# luckfox-pico-snippets

./: .gitmodules  README.md  toolchain-luckfox.cmake
mcp251x/: README.md  rv1103-luckfox-pico-ipc.dtsi
mcp251x/c_example/: CMakeLists.txt
mcp251x/c_example/src/: main.c
